Fix truck modal scroll issue
Fix issue were scrollbar was missing for modal
content.

--- a/stock_control_frontend/react/src/css/index.css
+++ b/stock_control_frontend/react/src/css/index.css
@@ -12,3 +12,12 @@ div.app-main {
 h1, h2, h3, h4, h5, h6 {
     color: yellow;
 }
+
+button.table-btn {
+    transition: all 200ms ease-in-out
+}
+
+button.table-btn:hover {
+    transform: scale(1.25);
+    z-index: 10;
+}
