--- a/stock_control_frontend/react/src/css/stock-update-modal.css
+++ b/stock_control_frontend/react/src/css/stock-update-modal.css
@@ -44,11 +44,6 @@ input {
     vertical-align: top;
 }
 
-.qtybtn {
-    font-size: 1em;
-    margin: 0 0.25em 0 0.25em;
-}
-
 .xfer-button {
     margin: 1em 0 0 0;
     text-align: right;
@@ -61,8 +56,10 @@ input {
 
 .ReactModal__Overlay--after-open {
     opacity: 1;
+    /* overflow-y: scroll !important; */
 }
 
 .ReactModal__Overlay--before-close {
     opacity: 0;
 }
+
